fix text overflowing over navbar

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,7 +3,8 @@ $pink-clr: #e57373;
 $bg-white-8: #eeeeeecc;
 $clr:hsla(214, 100%, 95%, 0.9);
 .navbar {
-  background: #eee;
+  // background: #eee;
+  
   &-sm {
     display: none;
     background: #000;
