--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -18,7 +18,6 @@ $bubblewhite: rgba(255, 255, 255, 0.1);
       display: inline-block;
       white-space: nowrap;
     }
-    z-index: 9999;
     display: inline-block;
     position: relative;
     font-size: 4rem;
